[tool.black]
line-length = 100
target-version = ['py39']

#[tool.bumpver]
#current_version = "1970.1.1"
#version_pattern = "YYYY.MM.INC1"
#commit_message = "Bump version {old_version} -> {new_version}"
#commit = true
#tag = false
#push = false
#
#[tool.bumpver.file_patterns]
#"pyproject.toml" = ['current_version = "{version}"']
#"setup.py" = ['version="{pep440_version}"']
#"README.md" = ['**Last release:** {version}']

[tool.isort]
combine_as_imports = true
line_length = 100
profile = "black"

[tool.ruff]
exclude = ["strongtyping/tests"]
line-length = 100
target-version = "py312"

[tool.poetry]
name = "strongtyping"
version = "3.12.1"
description = "Decorator which checks whether the function is called with the correct type of parameters"
authors = ["FelixTheC <felixeisenmenger@gmx.net>"]
license = "MIT"
packages = [
    {include = "strongtyping"},
    {include = "strongtyping-stubs"},
]
exclude = ["strongtyping/tests"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
ujson = "^5.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
codecov = "^2.1.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
